--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -311,17 +311,21 @@ div {
 }
 
 
-.ability-item p{
+.ability-item {
 	
 	text-align: left;
 	margin: 0px 0px 10px 20px;
 	text-indent: 10px;
-	-webkit-columns: 2;
-  -moz-columns: 2;
-  columns: 2;
-	width: 100%;
+	
 }
 
+
+.sa_table {
+	
+table-layout: fixed;
+	width: 100%;
+	
+}
 
 .factions-item {
 
@@ -523,6 +527,8 @@ div {
 	text-indent: 20px;
   padding: 	0 20 0 15px;
   line-height: 1.4em;
+	
+	
 }
 
 
@@ -552,6 +558,10 @@ div {
 
 .right-line.first{
   margin: 0 0 0 0;
+	-webkit-columns: 2;
+  -moz-columns: 2;
+  columns: 2;
+	width: 100%;
 }
 .right-line.last{
   margin: 0px 0px 10px 0px;
