--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -150,7 +150,7 @@ div {
 	display: flex;
 	flex-grow: 1;
     flex-basis: 0;
-	max-width: 800px;
+	max-width: 900px;
 	min-width: 600px;
 	flex-wrap: wrap;
 	
@@ -172,8 +172,8 @@ div {
 	
 	flex-direction: column;
 	vertical-align: top;
-	padding: 0px 0px 10px;
-	background-image: url("../../images/bg-testt.png");
+	padding: 0px 0px 10px 20px;
+	background-image: url();
 	
 }
 
@@ -549,12 +549,13 @@ div {
 	
 	display: inline-block;
 	text-align: justify;
-	width: 90%;
+	min-width: 100px;
+	max-width: 450px;
 	
 	font-weight: normal;
 	color: indigo;
 	text-indent: 0px;
-  padding: 	0px 20px 0px 15px;
+  padding: 	10px 0px 0px 15px;
   line-height: 1.4em;
 }
 
@@ -581,13 +582,13 @@ table, th, td {
 	column-count: 2;
 	column-gap: 20px;
 	min-width: 600px;
-	max-width: 1200px;
+	max-width: 1600px;
 	
 	font-weight: normal;
 	color: indigo;
 	text-indent: 0px;
 	margin: 10px 10px 10px 25px;
-  padding: 	0 20px 0 0px;
+  padding: 	0px 20px 0px 0px;
   line-height: 1.4em;
 	
 }
@@ -859,6 +860,34 @@ table, th, td {
 	padding-bottom: 60px;
   }
 
+
+#cell6 {
+	
+	 flex-direction: row;
+    
+    position: relative;
+     
+    align-content: flex-start;
+	align-items: flex-start;
+	padding-bottom: 60px;
+    column-count: 2;
+	min-width: 300px;
+	max-width: 1200px;
+}
+
+
+#cell6 p {
+  margin: 0;
+}
+
+
+#cell6 p + p {
+  text-indent: 0;  
+
+}
+
+
+
 #bgcell{
 		flex-direction: column;
     	position: relative;
@@ -933,7 +962,8 @@ table, th, td {
 	align-items: flex-start;
 	padding-bottom: 60px;
     column-count: 2;
-	column-width: 400px;
+	min-width: 300px;
+	max-width: 1200px;
 }
 #cell6 p {
   margin: 0;
