--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -922,6 +922,7 @@ table, th, td {
      
     align-content: center;
 	align-items: flex-start;
+	  padding-left: 60px;
   }
   
 	#cell2 {
@@ -950,6 +951,7 @@ table, th, td {
 	align-items: flex-start;
 	column-count: 2;
 	column-width: 400px;
+	padding-left: 60px;
   }
 
 #cell6 {
