--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -557,6 +557,7 @@ div {
 	text-indent: 0px;
   padding: 	10px 0px 0px 15px;
   line-height: 1.4em;
+	margin-left: 60px;
 }
 
 table, th, td {
@@ -703,6 +704,26 @@ table, th, td {
 }
 
 
+.npc-heading-middle {
+	
+	flex-grow: 1;
+	display: inline-block;
+	
+	min-width: 250px;
+	margin: 10px 0px 0px 75px;
+	
+}
+
+.npc-heading-middle h1{
+  font-family: 'Libre Baskerville', 'Lora', 'Calisto MT', 'Bookman Old Style', Bookman, 'Goudy Old Style', Garamond, 'Hoefler Text', 'Bitstream Charter', Georgia, serif;
+  color:indigo;
+  font-size: 32px;
+  line-height: 1.2em;
+  margin: 0px 0px 0px 75x;
+  letter-spacing: 0px;
+  font-variant: small-caps;
+  font-weight: bold;
+}
 
 
 .glow {
@@ -949,9 +970,9 @@ table, th, td {
      
     align-content: flex-start;
 	align-items: flex-start;
-	column-count: 2;
-	column-width: 400px;
+	
 	padding-left: 60px;
+	padding-right: 20px;
   }
 
 #cell6 {
@@ -963,9 +984,10 @@ table, th, td {
     align-content: flex-start;
 	align-items: flex-start;
 	padding-bottom: 60px;
-    column-count: 2;
-	min-width: 300px;
-	max-width: 1200px;
+    
+	padding-left: 90px;
+	padding-right: 20px;
+
 }
 #cell6 p {
   margin: 0;
