--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -697,7 +697,7 @@ table, th, td {
   color:indigo;
   font-size: 32px;
   line-height: 1.2em;
-  margin: 0px 0px 0px 0x;
+  margin: 0px 0px 0px 0px;
   letter-spacing: 0px;
   font-variant: small-caps;
   font-weight: bold;
@@ -719,7 +719,7 @@ table, th, td {
   color:indigo;
   font-size: 32px;
   line-height: 1.2em;
-  margin: 0px 0px 0px 75x;
+  margin: 0px 0px 0px 75px;
   letter-spacing: 0px;
   font-variant: small-caps;
   font-weight: bold;
@@ -749,15 +749,7 @@ table, th, td {
 }
 
 
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #ggg, 0 0 20px #ggg, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
-}
+
 
 .steel-border{
   display: flex;
@@ -775,7 +767,7 @@ table, th, td {
 
 
 
-@media only screen and (min-width: 0) and (max-width: 720px) {
+@media only screen and (min-width: 0) and (max-width: 1200px) {
   .container {
 	  flex-direction: column;
 	  position: relative;
@@ -814,6 +806,14 @@ table, th, td {
 		display:flex;
 	}
 	
+	#cell5 {
+		display: none;
+	}
+	
+	#cell6 {
+		display: none;
+	}
+	
 	#bgcell{
 		flex-direction: column;
     	position: relative;
@@ -828,98 +828,9 @@ table, th, td {
 }
 
 
-@media only screen and (min-width: 720px) and (max-width: 1080px) {
-  .container {
-
-	flex-direction: column;
-    position: relative;
-  }
-	
-	
-	.container2 {
-
-	flex-direction: column;
-    position: relative;
-  }
-  
-  #cell1 {
-		display: none;
-	}	
-  
-  #cell2 {
-    flex-direction: column;
-    
-    position: relative;
-    	  padding-bottom: 20px;
-
-   
-  }
-  
-	
-#cell3 {
-    flex-direction: column;
-    position: relative;
-	
-  }
-	
-#cell4 {
-		
-		display:flex;
-	}
-	
-	
-}
-
-#cell5 {
-	
-	 flex-direction: row;
-    
-    position: relative;
-     
-    align-content: flex-start;
-	align-items: flex-start;
-	padding-bottom: 60px;
-  }
 
 
-#cell6 {
-	
-	 flex-direction: row;
-    
-    position: relative;
-     
-    align-content: flex-start;
-	align-items: flex-start;
-	padding-bottom: 60px;
-    column-count: 2;
-	
-}
-
-
-#cell6 p {
-  margin: 0;
-}
-
-
-#cell6 p + p {
-  text-indent: 0;  
-
-}
-
-
-
-#bgcell{
-		flex-direction: column;
-    	position: relative;
-		width: 90%;
-		
-	}
-
-
-
-
-
-@media only screen and (min-width: 1080px) and (max-width: 5000px) {
+@media only screen and (min-width: 1200px) and (max-width: 5000px) {
   .container {
 	  flex-direction: column;
     position: relative;
@@ -1004,6 +915,3 @@ table, th, td {
 		width: 90%;
 		
 	}
-
-
-
