--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -103,8 +103,8 @@ div {
 
 
 .container2 {
-  margin: 0 0 20 0;
-	padding: 0 0 40px 0;
+  margin: 0 auto;
+  padding: 0 0 60px 0;
 	
 }
 
@@ -815,6 +815,7 @@ table, th, td {
 	}
 	
 	#bgcell{
+		display: flex;
 		flex-direction: column;
     	position: relative;
 		width: 90%;
@@ -910,7 +911,8 @@ table, th, td {
 }
 
 #bgcell{
-		flex-direction: column;
+		display: flex;
+	flex-direction: column;
     	position: relative;
 		width: 90%;
 		
