--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -597,9 +597,16 @@ table, th, td {
 .right-line-columns h3 {
 	
 	display: inline-block;
-  margin: 10px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
   font-size: 16px;
   line-height: 100%;
+	color: indigo;
+}
+
+.right-line-columns h4 {
+  margin: 0px 0px 0px 0px;
+
+	font-size: 20px;
 	color: indigo;
 }
 
