--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -610,6 +610,21 @@ table, th, td {
 	color: indigo;
 }
 
+
+.right-line-columns p1 {
+  margin: 0px 0px 5px 0px;
+
+	font-size: 16px;
+	color: indigo;
+}
+
+.right-line-columns p2 {
+  margin: 0px 0px 0px 0px;
+
+	font-size: 16px;
+	color: indigo;
+}
+
 .right-line h3 {
 	
 	display: inline-block;
