--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -581,7 +581,7 @@ table, th, td {
 	display: inline-block;
 	text-align: justify;
 	column-count: 2;
-	column-gap: 20px;
+	column-gap: 60px;
 	min-width: 1100px;
 	max-width: 1800px;
 	
@@ -604,7 +604,7 @@ table, th, td {
 }
 
 .right-line-columns h4 {
-  margin: -5px 0px 5px 0px;
+  margin: 0px 0px 5px 0px;
 
 	font-size: 20px;
 	color: indigo;
@@ -613,14 +613,15 @@ table, th, td {
 
 .right-line-columns p1 {
   margin: 0px 0px 5px 0px;
-
 	font-size: 16px;
 	color: indigo;
 }
 
-.right-line-columns p2 {
-  margin: 0px 0px 0px 0px;
-
+.right-line-columns h2 {
+  margin: 0px 0px 20px 0px;
+  line-height: 1.2em;
+	
+  padding-bottom: 10px;
 	font-size: 16px;
 	color: indigo;
 }
