--- a/npcs/html/stylesheet.css
+++ b/npcs/html/stylesheet.css
@@ -604,7 +604,7 @@ table, th, td {
 }
 
 .right-line-columns h4 {
-  margin: 0px 0px 5px 0px;
+  margin: 10px 0px 5px 0px;
 
 	font-size: 20px;
 	color: indigo;
@@ -612,13 +612,14 @@ table, th, td {
 
 
 .right-line-columns p1 {
-  margin: 0px 0px 5px 0px;
+  margin: 0px 0px 5px 10px;
 	font-size: 16px;
 	color: indigo;
 }
 
-.right-line-columns h2 {
-  margin: 0px 0px 20px 0px;
+.right-line-columns p2 {
+  margin: 0px 0px 20px 10px;
+	hanging-punctuation: force-end;
   line-height: 1.2em;
 	
   padding-bottom: 10px;
